editor-components/stats/stats13/stats13.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    min-height: var(--max-width);
    position: relative;
    overflow: hidden;
    display: flex;
    justify-content: center;

    &.no-image {
        min-height: 0;
    }

    .content {
        .wrapper {
            display: flex;
            align-items: flex-start;
            width: 50%;

            .left-content {
                display: flex;
                flex-direction: column;
                overflow-wrap: break-word;
                width: 100%;
                min-width: 0;
                gap: var(--gap-xl);
                justify-content: flex-start !important;
                align-items: flex-start;
                text-align: left;

                .rating-container {
                    display: flex;
                    flex-wrap: wrap;
                    align-items: center;
                    gap: var(--composer-gap-sm);
                    font-size: 2rem;
                    color: var(--composer-primary-color);
                    justify-content: flex-start !important;

                    .rating-number {
                        font-size: 1rem;
                        color: var(--composer-font-color-primary);
                        margin-left: 0.5rem;
                        font-weight: 550;
                        overflow-wrap: anywhere;
                    }
                }

                .title {
                    overflow-wrap: anywhere;
                    text-align: left;
                    width: 100%;
                }

                .button-container {
                    display: flex;
                    flex-wrap: wrap;
                    gap: var(--gap-md);
                    justify-content: flex-start !important;
                }

                .stats-container {
                    display: flex;
                    justify-content: flex-start !important;
                    flex-wrap: nowrap !important;
                    gap: 3rem;

                    .stat-item {
                        text-align: start;

                        .stat-number {
                            font-size: 2rem;
                            font-weight: bold;
                            color: var(--composer-primary-color);
                        }

                        .stat-description {
                            text-align: left;
                        }
                    }
                }
            }

            .right-content {
                position: absolute;
                top: 0;
                right: 0;
                width: calc(50% - var(--composer-gap-md));
                flex: 1;
                height: 100%;

                .image {
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                    padding: calc(var(--padding-md) * 8) 0;
                }
            }

            .has-content {
                display: block;

                .image {
                    width: 200%;
                    object-fit: cover;
                }
            }
        }

        .full-width {
            width: 100%;
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {
        .content {
            .wrapper {
                width: 100%;
                padding-bottom: 600px;

                .left-content {
                    .stats-container {
                        gap: 1rem;

                        .stat-item {
                            width: 50%;
                        }
                    }
                }

                .right-content {
                    top: unset;
                    right: unset;
                    left: 0;
                    bottom: 0;
                    width: 100%;
                    height: 600px;

                    .image {
                        width: 100%;
                        height: 100%;
                        object-fit: cover;
                        padding: 0 0 80px 0;
                    }
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        display: block;

        .content {
            .wrapper {
                padding-bottom: 450px;

                .left-content {
                    .button-container {
                        flex-direction: column;
                    }
                }

                .right-content {
                    height: 450px;
                }
            }
        }
    }
}

