fix(Stats 13): - Fix inline editor functionality - Remove center alignment (set to left-aligned) - Adjust mobile view to match the original component design

--- a/editor-components/stats/stats13/stats13.module.scss
+++ b/editor-components/stats/stats13/stats13.module.scss
@@ -1,7 +1,7 @@
 @use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
 
 .container {
-    min-height: var(--max-width);
+    min-height: 800px;
     position: relative;
     overflow: hidden;
     display: flex;
@@ -23,26 +23,21 @@
                 overflow-wrap: break-word;
                 width: 100%;
                 min-width: 0;
-                gap: var(--gap-xl);
                 justify-content: flex-start !important;
                 align-items: flex-start;
                 text-align: left;
 
                 .rating-container {
                     display: flex;
-                    flex-wrap: wrap;
                     align-items: center;
                     gap: var(--composer-gap-sm);
                     font-size: 2rem;
                     color: var(--composer-primary-color);
                     justify-content: flex-start !important;
+                    margin: 0;
 
                     .rating-number {
-                        font-size: 1rem;
-                        color: var(--composer-font-color-primary);
-                        margin-left: 0.5rem;
-                        font-weight: 550;
-                        overflow-wrap: anywhere;
+                        height: 0;
                     }
                 }
 
@@ -62,56 +57,59 @@
                 .stats-container {
                     display: flex;
                     justify-content: flex-start !important;
-                    flex-wrap: nowrap !important;
-                    gap: 3rem;
+                    flex-wrap: wrap;
+                    gap: 2rem;
 
                     .stat-item {
                         text-align: start;
+                        gap: var(--gap-sm);
+                        display: flex;
+                        flex-direction: column;
 
                         .stat-number {
-                            font-size: 2rem;
-                            font-weight: bold;
                             color: var(--composer-primary-color);
                         }
 
                         .stat-description {
-                            text-align: left;
+                            flex-wrap: wrap;
+                            text-align: start;
                         }
                     }
                 }
             }
+        }
 
-            .right-content {
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: calc(50% - var(--composer-gap-md));
-                flex: 1;
+        .right-content {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: calc(50% - var(--composer-gap-md));
+            flex: 1;
+            height: 100%;
+
+            .image {
+                width: 100%;
                 height: 100%;
-
-                .image {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    padding: calc(var(--padding-md) * 8) 0;
-                }
-            }
-
-            .has-content {
-                display: block;
-
-                .image {
-                    width: 200%;
-                    object-fit: cover;
-                }
+                object-fit: cover;
+                padding: calc(var(--padding-md) * 8) 0;
             }
         }
 
-        .full-width {
-            width: 100%;
+        .has-content {
+            display: block;
+
+            .image {
+                width: 200%;
+                object-fit: cover;
+            }
         }
     }
+
+    .full-width {
+        width: 100%;
+    }
 }
+
 
 @container (max-width: #{$composer-tablet-width}) {
     .container {
@@ -119,16 +117,6 @@
             .wrapper {
                 width: 100%;
                 padding-bottom: 600px;
-
-                .left-content {
-                    .stats-container {
-                        gap: 1rem;
-
-                        .stat-item {
-                            width: 50%;
-                        }
-                    }
-                }
 
                 .right-content {
                     top: unset;
@@ -156,7 +144,7 @@
 
         .content {
             .wrapper {
-                padding-bottom: 450px;
+                padding-bottom: 400px;
 
                 .left-content {
                     .button-container {
@@ -165,7 +153,7 @@
                 }
 
                 .right-content {
-                    height: 450px;
+                    height: 400px;
                 }
             }
         }
